Convert approve endpoints to Postie MapCommand
