# src/Wrangler.Api/openapi-v1.json
@@ -287,7 +287,7 @@
     "/pull-requests/approve": {
       "post": {
         "tags": [
-          "ApprovePullRequestsHandler"
+          "Asm.Wrangler.Api"
         ],
         "requestBody": {
           "content": {
@@ -389,7 +389,7 @@
     "/gates/approve": {
       "post": {
         "tags": [
-          "ApproveGatesHandler"
+          "Asm.Wrangler.Api"
         ],
         "requestBody": {
           "content": {
@@ -1983,12 +1983,6 @@
     },
     {
       "name": "WorkflowRunsHandler"
-    },
-    {
-      "name": "ApprovePullRequestsHandler"
-    },
-    {
-      "name": "ApproveGatesHandler"
     }
   ]
 }
